--- a/submission/presentation.rmd
+++ b/submission/presentation.rmd
@@ -174,6 +174,13 @@ We consider three different approaches to smoothing:
 - Restricted cubic splines
 - Local likelihood
 
+
+## Demonstration
+
+```{r smooth, fig.show = "hold", out.width = "85%"}
+knitr::include_graphics(here::here("figures/smooth.png"))
+```
+
 ## Evaluation
 
 **Root mean squared error**
